--- a/user-service/package.json
+++ b/user-service/package.json
@@ -3,6 +3,7 @@
   "description": "",
   "version": "0.1.0",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.0",
     "mocha": "^8.2.1",
     "react-dom": "^17.0.1",
